force-app/main/default/objects/Sell_Through_Report_Import__c/Sell_Through_Report_Import__c.object-meta.xml
<CustomObject>
    <label>Sell Through Report Import</label>
    <nameField>
        <label>Sell Through Report Imports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Through Report Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>