force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Art_Nr_Distri_External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Art_Nr_Distri_External_Product_Code__c</fullName>
    <label>Art-Nr. Distri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>