force-app/main/default/objects/Sell_Through_Report_Import__c/fields/ArticleName_Formula__c.field-meta.xml
<CustomField>
    <fullName>ArticleName_Formula__c</fullName>
    <formula>IF(ISBLANK(ArticleName_Product_Name__c) , &apos;No Value&apos;, SUBSTITUTE(ArticleName_Product_Name__c, &apos;[Viewsonic] &apos;
, &apos;&apos;))</formula>
    <label>ArticleName Formula</label>
    <type>Text</type>
</CustomField>