force-app/main/default/objects/Sell_Through_Report_Import__c/fields/ArticleName_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ArticleName_Product_Name__c</fullName>
    <label>ArticleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>