force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Artikel_BenQ_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Artikel_BenQ_Product_Code__c</fullName>
    <label>Artikel BenQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>