force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Artikel_Bezeichnung_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Artikel_Bezeichnung_Product_Name__c</fullName>
    <label>Artikel Bezeichnung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>