force-app/main/default/objects/Sell_Through_Report_Import__c/fields/ARTIKEL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ARTIKEL_Product_Name__c</fullName>
    <label>ARTIKEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>