force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Artikelbezeichnung_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Artikelbezeichnung_Product_Name__c</fullName>
    <label>Artikelbezeichnung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>