force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Artikelnummer_Distri_External_Product_Co__c.field-meta.xml
<CustomField>
    <fullName>Artikelnummer_Distri_External_Product_Co__c</fullName>
    <label>Artikelnummer Distri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>