force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Artikelnummer_Hersteller_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Artikelnummer_Hersteller_Product_Code__c</fullName>
    <label>Artikelnummer Hersteller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>