force-app/main/default/objects/Sell_Through_Report_Import__c/fields/City_City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_City_Name__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>