force-app/main/default/objects/Sell_Through_Report_Import__c/fields/City_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_Code_Formula__c</fullName>
    <formula>/*
CASE(distributor__r.Name , 
					&apos;ALSO Deutschland GmbH&apos;, 	Pos_code_City_Code__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, PLZ_City_Code__c, 
					&apos;Delo Computer GmbH&apos;, PLZ_City_Code__c, 
					&apos;Herweck AG&apos;, Pos_code_City_Code__c,
					&apos;Schuss AV-Projektionssysteme GmbH&apos;, Pos_code_City_Code__c,
					&apos;Tarox AG&apos;, PLZ_City_Code__c, 
		   &apos;prodyTel Distribution GmbH&apos;, gerPOS_FirmaPLZ_City_Code__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Pos_code_City_Code__c
,null)</formula>
    <label>City Code</label>
    <type>Text</type>
</CustomField>