force-app/main/default/objects/Sell_Through_Report_Import__c/fields/City_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_Name_Formula__c</fullName>
    <formula>/*
CASE( distributor__r.Name , 
					&apos;ALSO Deutschland GmbH&apos;, 	City_City_Name__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Ort_City_Name__c, 
					&apos;Delo Computer GmbH&apos;, Ort_City_Name__c,
					&apos;Herweck AG&apos;, City_City_Name__c,
					&apos;Schuss AV-Projektionssysteme GmbH&apos;, City_City_Name__c,
					&apos;Tarox AG&apos;, Ort_City_Name__c,
		   &apos;prodyTel Distribution GmbH&apos;, gerPOS_FirmaStadt_City_Name__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
City_City_Name__c
,null)</formula>
    <label>City Name</label>
    <type>Text</type>
</CustomField>