force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Company_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Customer_Name__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>