force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Formula__c</fullName>
    <formula>/*
CASE(distributor__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, 	Country__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Nam_Country__c, 
					&apos;Computation Systemhaus GmbH&apos;, Country__c,
					&apos;Delo Computer GmbH&apos;,  Land_Country__c, 
		   &apos;Herweck AG&apos;, Country__c,
					&apos;Tarox AG&apos;, Land_Country__c, 
					&apos;prodyTel Distribution GmbH&apos;,  gerPOS_FirmaLandKurz_Country__c, 
					null)
*/
IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;),
Country__c
,null)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>