force-app/main/default/objects/Sell_Through_Report_Import__c/fields/CsvUploaderFileIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CsvUploaderFileIdentifier__c</fullName>
    <inlineHelpText>An unique file identifier for records loaded from CSV Uploader.
            The identifier is composed of CSV File Name + Today + Timestamp.</inlineHelpText>
    <label>CSV Uploader File Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>