force-app/main/default/objects/Sell_Through_Report_Import__c/fields/CustName2_Secondary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CustName2_Secondary_Customer_Name__c</fullName>
    <label>CustName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>