force-app/main/default/objects/Sell_Through_Report_Import__c/fields/CustName_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CustName_Customer_Name__c</fullName>
    <label>CustName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>