force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Customer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Formula__c</fullName>
    <formula>IF(OR(ISPICKVAL(VS_Region__c, &apos;VSI&apos;),ISPICKVAL(VS_Region__c, &apos;VSE&apos;)), Name_Customer_Name__c,null)
/*
			CASE(distributor__r.Name  , 
					&apos;ALSO Deutschland GmbH&apos;, CustName_Customer_Name__c, 
					&apos;Ingram Micro Distribution GmbH&apos;,Name, 
					&apos;Computation Systemhaus GmbH&apos;, CustomerName_Customer_Name__c, 
					&apos;Delo Computer GmbH&apos;, Firma_Customer_Name__c,
					&apos;Herweck AG&apos;, CustName_Customer_Name__c,
					&apos;Schuss AV-Projektionssysteme GmbH&apos;, Company_Customer_Name__c,
				&apos;Tarox AG&apos;, Name, 	
				&apos;prodyTel Distribution GmbH&apos;, 	 gerPOS_FirmaName1_Customer_Name__c, 
					null )
	*/</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>