force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Customer_Phone_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number_Formula__c</fullName>
    <formula>CASE( distributor__r.Name, 
					&apos;Ingram Micro Distribution GmbH&apos;, Telefon_Customer_Phone_Number__c, 
					&apos;Tarox AG&apos;, Telefon_Customer_Phone_Number__c,
					&apos;prodyTel Distribution GmbH&apos;,  gerPOS_FirmaTelZentrale_Customer_Phone_N__c, 
					null)</formula>
    <label>Customer Phone Number</label>
    <type>Text</type>
</CustomField>