force-app/main/default/objects/Sell_Through_Report_Import__c/fields/CustomerID_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>CustomerID_External_Customer_Id__c</fullName>
    <label>CustomerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>