force-app/main/default/objects/Sell_Through_Report_Import__c/fields/CustomerName_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CustomerName_Customer_Name__c</fullName>
    <label>CustomerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>