force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Custumer_Name_Secondary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Custumer_Name_Secondary_Customer_Name__c</fullName>
    <label>Custumer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>