force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Custumer_Number_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Custumer_Number_External_Customer_Id__c</fullName>
    <label>Custumer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>