force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Datum_Date__c.field-meta.xml
<CustomField>
    <fullName>Datum_Date__c</fullName>
    <label>Datum</label>
    <type>Date</type>
</CustomField>