force-app/main/default/objects/Sell_Through_Report_Import__c/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.VSSubRegion__c</field>
            <operation>equals</operation>
            <valueField>$Source.VS_SubRegion__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sell Through Report Imports</relationshipLabel>
    <relationshipName>Sell_Through_Report_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>