force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Einzel_Netto_Preis_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Einzel_Netto_Preis_Unit_Price__c</fullName>
    <label>Einzel Netto Preis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>