force-app/main/default/objects/Sell_Through_Report_Import__c/fields/External_Company_Request__c.field-meta.xml
<CustomField>
    <fullName>External_Company_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Company ID Request</label>
    <referenceTo>External_Company_Request__c</referenceTo>
    <relationshipLabel>Sell Through Report Imports</relationshipLabel>
    <relationshipName>Sell_Through_Report_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>