force-app/main/default/objects/Sell_Through_Report_Import__c/fields/External_Product_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Code_Formula__c</fullName>
    <formula>IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;), Material_External_Product_Code__c,null)
/*
CASE( distributor__r.Name,
					&apos;ALSO Deutschland GmbH&apos;, 	Material_External_Product_Code__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Artikel_Ingram_External_Product_Code__c, 
					&apos;Computation Systemhaus GmbH&apos;, ArticleID_External_Product_Code__c, 
					&apos;Delo Computer GmbH&apos;, Art_Nr_Distri_External_Product_Code__c, 
					&apos;Herweck AG&apos;,  Artikelnummer_Distri_External_Product_Co__c,
		                       null)
																									*/</formula>
    <label>External Product Code</label>
    <type>Text</type>
</CustomField>