force-app/main/default/objects/Sell_Through_Report_Import__c/fields/factura_date_Date__c.field-meta.xml
<CustomField>
    <fullName>factura_date_Date__c</fullName>
    <label>factura date</label>
    <type>Date</type>
</CustomField>