force-app/main/default/objects/Sell_Through_Report_Import__c/fields/fdate2__c.field-meta.xml
<CustomField>
    <fullName>fdate2__c</fullName>
    <formula>IF(ISBLANK(fdate_Date__c) , TODAY(), DATEVALUE(LEFT(fdate_Date__c,4)&amp;&apos;-&apos;&amp;MID(fdate_Date__c,5,2)&amp;&apos;-&apos;&amp;RIGHT(fdate_Date__c,2)))</formula>
    <label>fdate2</label>
    <type>Date</type>
</CustomField>