force-app/main/default/objects/Sell_Through_Report_Import__c/fields/fdate_Date__c.field-meta.xml
<CustomField>
    <fullName>fdate_Date__c</fullName>
    <label>fdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>