force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Firma_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Firma_Customer_Name__c</fullName>
    <label>Firma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>