force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_Anzahl_Quantity__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_Anzahl_Quantity__c</fullName>
    <label>gerPOS_Anzahl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>