force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_ArtikelNr_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_ArtikelNr_Product_Code__c</fullName>
    <label>gerPOS_ArtikelNr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>