force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_DatumVK2__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_DatumVK2__c</fullName>
    <formula>IF(ISBLANK(gerPOS_DatumVK_Date__c) , TODAY(), DATEVALUE(RIGHT(gerPOS_DatumVK_Date__c,4)&amp;&apos;-&apos;&amp;MID(gerPOS_DatumVK_Date__c,4,2)&amp;&apos;-&apos;&amp;LEFT(gerPOS_DatumVK_Date__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>gerPOS_DatumVK2</label>
    <type>Date</type>
</CustomField>