force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_DatumVK_Date__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_DatumVK_Date__c</fullName>
    <label>gerPOS_DatumVK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>