force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaAdresse1_Street__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaAdresse1_Street__c</fullName>
    <label>gerPOS_FirmaAdresse1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>