force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaLandKurz_Country__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaLandKurz_Country__c</fullName>
    <label>gerPOS_FirmaLandKurz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>