force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaName1_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaName1_Customer_Name__c</fullName>
    <label>gerPOS_FirmaName1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>