force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaName2_Secondary_Customer_Nam__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaName2_Secondary_Customer_Nam__c</fullName>
    <label>gerPOS_FirmaName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>