force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaPLZ_City_Code__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaPLZ_City_Code__c</fullName>
    <label>gerPOS_FirmaPLZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>