force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaStadt_City_Name__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaStadt_City_Name__c</fullName>
    <label>gerPOS_FirmaStadt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>