force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_FirmaTelZentrale_Customer_Phone_N__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_FirmaTelZentrale_Customer_Phone_N__c</fullName>
    <label>gerPOS_FirmaTelZentrale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>