force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_KdNr_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_KdNr_External_Customer_Id__c</fullName>
    <label>gerPOS_KdNr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>