force-app/main/default/objects/Sell_Through_Report_Import__c/fields/gerPOS_PreisVK_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>gerPOS_PreisVK_Unit_Price__c</fullName>
    <label>gerPOS_PreisVK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>