force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Gesamt_Preis_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gesamt_Preis_Total_Revenue__c</fullName>
    <label>Gesamt  Preis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>