force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Gesamtpreis_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gesamtpreis_Total_Revenue__c</fullName>
    <label>Gesamtpreis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>