force-app/main/default/objects/Sell_Through_Report_Import__c/fields/HEK__c.field-meta.xml
<CustomField>
    <fullName>HEK__c</fullName>
    <label>HEK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>