force-app/main/default/objects/Sell_Through_Report_Import__c/fields/HEK_Formula__c.field-meta.xml
<CustomField>
    <fullName>HEK_Formula__c</fullName>
    <formula>VALUE(TRIM(SUBSTITUTE(HEK__c, &apos;€&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HEK Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>