force-app/main/default/objects/Sell_Through_Report_Import__c/fields/HEK_SUMME_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HEK_SUMME_Total_Revenue__c</fullName>
    <label>HEK SUMME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>