force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Import_File__c.field-meta.xml
<CustomField>
    <fullName>Import_File__c</fullName>
    <formula>CASE(distributor_id__c,   null, &apos;STRI-Distributor-&apos;&amp;TEXT(CreatedDate) ,  &apos;STRI-&apos;&amp;distributor__r.Name&amp;&apos;-&apos;&amp;TEXT(CreatedDate))</formula>
    <label>Import File</label>
    <type>Text</type>
</CustomField>