force-app/main/default/objects/Sell_Through_Report_Import__c/fields/KD_Nr_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>KD_Nr_External_Customer_Id__c</fullName>
    <label>KD-Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>