force-app/main/default/objects/Sell_Through_Report_Import__c/fields/KundeNr_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>KundeNr_External_Customer_Id__c</fullName>
    <label>KundeNr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>