force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Land_Country__c.field-meta.xml
<CustomField>
    <fullName>Land_Country__c</fullName>
    <label>Land</label>
    <length>255</length>
    <type>Text</type>
</CustomField>