force-app/main/default/objects/Sell_Through_Report_Import__c/fields/MaterialName_DE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>MaterialName_DE_Product_Name__c</fullName>
    <label>MaterialName(DE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>