force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Menge_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Menge_Quantity__c</fullName>
    <label>Menge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>