force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Mfr_part_number_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Mfr_part_number_Product_Code__c</fullName>
    <label>Mfr part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>