force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Modell_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Modell_Product_Code__c</fullName>
    <label>Modell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>