force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Nam_Country__c.field-meta.xml
<CustomField>
    <fullName>Nam_Country__c</fullName>
    <label>Nam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>