force-app/main/default/objects/Sell_Through_Report_Import__c/fields/NAME2_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>NAME2_Customer_Name__c</fullName>
    <label>NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>