force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Name_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Name_Customer_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>