force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Ort_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Ort_City_Name__c</fullName>
    <label>Ort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>