force-app/main/default/objects/Sell_Through_Report_Import__c/fields/PartNumber_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>PartNumber_Product_Code__c</fullName>
    <label>PartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>