force-app/main/default/objects/Sell_Through_Report_Import__c/fields/PLZ_City_Code__c.field-meta.xml
<CustomField>
    <fullName>PLZ_City_Code__c</fullName>
    <label>PLZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>