force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Pos_code_City_Code__c.field-meta.xml
<CustomField>
    <fullName>Pos_code_City_Code__c</fullName>
    <label>Pos. code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>