force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Price_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Price_Unit_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>