force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Product_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Formula__c</fullName>
    <formula>IF(OR(ISPICKVAL(VS_Region__c, &apos;VSI&apos;),ISPICKVAL(VS_Region__c, &apos;VSE&apos;)), Modell_Product_Code__c,null)
/*			
CASE( distributor__r.Name, 
        &apos;ALSO Deutschland GmbH&apos;, Mfr_part_number_Product_Code__c, 
        &apos;Ingram Micro Distribution GmbH&apos;, Artikel_BenQ_Product_Code__c , 
        &apos;Computation Systemhaus GmbH&apos;, ArticleName_Formula__c, 
        &apos;Delo Computer GmbH&apos;, Modell_Product_Code__c, 
        &apos;Herweck AG&apos;, Artikelnummer_Hersteller_Product_Code__c,
        &apos;Schuss AV-Projektionssysteme GmbH&apos;, VS_Part_number_Product_Code__c,
        &apos;Tarox AG&apos;, HERST_NR_Product_Code__c, 
        &apos;prodyTel Distribution GmbH&apos;, gerPOS_ArtikelNr_Product_Code__c, 
        null)
*/</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>