force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Formula__c</fullName>
    <formula>IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;), MaterialName_DE_Product_Name__c,null)
/*
CASE(distributor__r.Name, 
					&apos;ALSO Deutschland GmbH&apos;, 	MaterialName_DE_Product_Name__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Artikelbezeichnung_Product_Name__c, 
		&apos;Computation Systemhaus GmbH&apos;, ArticleName_Product_Name__c,	
					&apos;Delo Computer GmbH&apos;, Artikel_Bezeichnung_Product_Name__c,
					&apos;Herweck AG&apos;, MaterialName_DE_Product_Name__c,
					&apos;Tarox AG&apos;,  ARTIKEL_Product_Name__c, 
					&apos;prodyTel Distribution GmbH&apos;,  gerPOS_ArtikelName_Product_Name__c, 
					null)
					*/</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>