force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Secondary_Customer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Name_Formula__c</fullName>
    <formula>IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;), CustName2_Secondary_Customer_Name__c,null)
/*
CASE( distributor__r.Name,
					&apos;ALSO Deutschland GmbH&apos;, 	CustName2_Secondary_Customer_Name__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Name_1_Secondary_Customer_Name__c, 
     &apos;Schuss AV-Projektionssysteme GmbH&apos;,  Custumer_Name_Secondary_Customer_Name__c, 
					&apos;prodyTel Distribution GmbH&apos;,  gerPOS_FirmaName2_Secondary_Customer_Nam__c, 
					null)
					*/</formula>
    <label>Secondary Customer Name</label>
    <type>Text</type>
</CustomField>