force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Selling_price_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_price_Unit_Price__c</fullName>
    <label>Selling price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>