force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Selling_Sum_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Selling_Sum_Total_Revenue__c</fullName>
    <label>Selling Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>