force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Stasse_Street__c.field-meta.xml
<CustomField>
    <fullName>Stasse_Street__c</fullName>
    <label>Stasse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>