force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Stra_e_Street__c.field-meta.xml
<CustomField>
    <fullName>Stra_e_Street__c</fullName>
    <label>Straße</label>
    <length>255</length>
    <type>Text</type>
</CustomField>