force-app/main/default/objects/Sell_Through_Report_Import__c/fields/STRASSE_Street__c.field-meta.xml
<CustomField>
    <fullName>STRASSE_Street__c</fullName>
    <label>STRASSE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>