force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Street_Formula__c.field-meta.xml
<CustomField>
    <fullName>Street_Formula__c</fullName>
    <formula>IF(ISPICKVAL(VS_Region__c, &apos;VSE&apos;), Street__c,null)
/*
CASE(distributor__r.Name,
					&apos;ALSO Deutschland GmbH&apos;, Street__c, 
					&apos;Ingram Micro Distribution GmbH&apos;, Stra_e_Street__c, 
					&apos;Delo Computer GmbH&apos;, Stasse_Street__c,
					&apos;Herweck AG&apos;, Street__c,
					&apos;Schuss AV-Projektionssysteme GmbH&apos;, Street__c,
					&apos;Tarox AG&apos;, STRASSE_Street__c, 
		   &apos;prodyTel Distribution GmbH&apos;, gerPOS_FirmaAdresse1_Street__c,     
					null)
					*/</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>