force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Synced_to_TCRM__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_TCRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to TCRM</label>
    <type>Checkbox</type>
</CustomField>