force-app/main/default/objects/Sell_Through_Report_Import__c/fields/Telefon_Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telefon_Customer_Phone_Number__c</fullName>
    <label>Telefon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>